tests/ui/error-codes/E0540.rs
#[inline()] //~ ERROR malformed `inline` attribute input
pub fn something() {}

fn main() {
    something();
}
